src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-44.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix_unterminated, \" ---foo\")"
---
- token: separator
  stream: " "
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directives_end
  stream: "---"
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- severity: error
  message: the directives end marker must be at the start of the line
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
  stream: "---"
- value:
    version: ~
    tags: {}
- remainder: foo
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 7
      line: 0
      column: 7

