src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-49.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix_unterminated, \"%YAML 1.2---\")"
---
- severity: error
  message: "directives must be separated from the preceding document by an end of document marker '...'"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
  stream: "%"
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: YAML
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 5
      line: 0
      column: 5
- token: separator
  stream: " "
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: error
  stream: 1.2---
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 12
      line: 0
      column: 12
- severity: error
  message: "expected a decimal digit (0-9), but found '-'"
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 10
      line: 0
      column: 10
  stream: "-"
- severity: error
  message: "a directives end marker line '---' is required after directives"
  span:
    start:
      index: 12
      line: 0
      column: 12
    end:
      index: 12
      line: 0
      column: 12
  stream: ""
- value:
    version: ~
    tags: {}

