src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-53.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix_unterminated, \"\")"
---
- severity: error
  message: "documents must be separated by a marker line ('...' or '---')"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 0
      line: 0
      column: 0
  stream: ""
- value:
    version: ~
    tags: {}

