src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-54.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix_unterminated, \"\\u{feff}\")"
---
- token: byte_order_mark
  stream: ﻿
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- severity: error
  message: "documents must be separated by a marker line ('...' or '---')"
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 3
      line: 0
      column: 3
  stream: ""
- value:
    version: ~
    tags: {}

